#+title: Number Theory with Clojure ChangeLog
#+author: Valery Kocubinsky
#+language: en

* Version 0.4.0

- Switch from pandoc to Org Mode export

* Version 0.3.0 <2024-03-11 Mon>

- Factorize into different format
  - ordered sequence of primes
  - ordered sequence of primes partitioned by a prime
  - sequence of prime, power of prime  
  - map 
- Use most appropriate factorization format when implement
  arithmetic functions
- Update documentation

* Version 0.2.0 <2024-02-22 Thu>

- Switch to lein
- Switch from Sieve of Eratosthenes to least prime divisor table
- Add more arithmetical functions
- Add ChangeLog.org

* Version 0.1.0 <2024-02-10 Sat>

- Sieve of Eratosthenes
- Integer factorization which use Sieve of Eratosthenes 
- Some multiplicative functions
- Dirichlet convolution
- Dirichlet inverse
- Generate markdown from org mode for nice rendering of math equation on github

	
